fix(compatibility): optimize JPA queries and improve type compatibility