@@ -10,6 +10,7 @@ import org.springframework.stereotype.Service;
 import org.springframework.transaction.annotation.Transactional;
 
 import java.util.List;
+import java.util.stream.Collectors;
 
 @Service
 @Transactional
@@ -25,7 +26,7 @@ public class AnimeProductService {
     public List<AnimeProductResponse> getAllProducts() {
         return repository.findAll().stream()
                 .map(AnimeProductResponse::fromEntity)
-                .toList();
+                .collect(Collectors.toList());
     }
 
     @Transactional(readOnly = true)
@@ -37,12 +38,34 @@ public class AnimeProductService {
 
     @Transactional(readOnly = true)
     public List<AnimeProductResponse> searchProducts(String title, String franchise, Category category) {
-        String cleanTitle = (title != null && !title.isBlank()) ? title.trim() : null;
-        String cleanFranchise = (franchise != null && !franchise.isBlank()) ? franchise.trim() : null;
+        String cleanTitle = (title != null && !title.trim().isEmpty()) ? title.trim() : null;
+        String cleanFranchise = (franchise != null && !franchise.trim().isEmpty()) ? franchise.trim() : null;
+
+        if (cleanTitle == null && cleanFranchise == null && category == null) {
+            return getAllProducts();
+        }
+
+        if (cleanTitle != null && cleanFranchise == null && category == null) {
+            return repository.findByTitleContainingIgnoreCase(cleanTitle).stream()
+                    .map(AnimeProductResponse::fromEntity)
+                    .collect(Collectors.toList());
+        }
+
+        if (cleanFranchise != null && cleanTitle == null && category == null) {
+            return repository.findByFranchiseContainingIgnoreCase(cleanFranchise).stream()
+                    .map(AnimeProductResponse::fromEntity)
+                    .collect(Collectors.toList());
+        }
+
+        if (category != null && cleanTitle == null && cleanFranchise == null) {
+            return repository.findByCategory(category).stream()
+                    .map(AnimeProductResponse::fromEntity)
+                    .collect(Collectors.toList());
+        }
 
         return repository.searchProducts(cleanTitle, cleanFranchise, category).stream()
                 .map(AnimeProductResponse::fromEntity)
-                .toList();
+                .collect(Collectors.toList());
     }
 
     public AnimeProductResponse createProduct(AnimeProductRequest request) {
